# URobot-NTU

./: .gitignore  README.md  URobot.rosinstall
doc/Common/: Log.md  README.md
doc/RealSense/: README.md
ur3e_robotiq/: CMakeLists.txt  package.xml
ur3e_robotiq/config/: camera_pose1.launch  camera_pose2.launch  camera_pose3.launch  camera_pose4.launch  camera_pose_color.launch  visualize.rviz
ur3e_robotiq/launch/: plan.launch  run.launch  rviz.launch
ur3e_robotiq/resource/: ori_obj.pcd  subsample.pcd
ur3e_robotiq/script/: detect.py  gripperSever.py  open3D_test.py
ur3e_robotiq/script/Gripper/: RobotiqHand.py  __init__.py  backup.py
ur3e_robotiq/src/: CMakeLists.txt  code_analysis.cpp  gripperSever.py  gripperSever_backup.py  human_collision.py  moveit_scene.cpp  planning_scene.cpp
ur3e_robotiq/src/Gripper_topic/: __init__.py
ur3e_robotiq/src/Human_vis/: process.py  run.py
ur3e_robotiq/src/pcl_tools/: CMakeLists.txt  frame_save.cpp  pcl_handle_node.cpp  temp.cpp
ur3e_robotiq/src_backup/: test.py  test_robotiq.py  vis.py
ur3e_robotiq/src_backup/Human_vis/: record
ur3e_robotiq/urdf/: ur3e_robotiq_2f85_model.xacro  ur3e_robotiq_2f85_model_limited.xacro
ur3e_robotiq_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3e_robotiq_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ompl_planning.yaml.backup  robotiq_arg2f_85_model.srdf  ros_controllers.yaml  sensors_realsense_depthmap.yaml  ur3e_calibration.yaml
ur3e_robotiq_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotiq_arg2f_85_model_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ur3e_robotiq_gazebo/: CMakeLists.txt  package.xml
ur3e_robotiq_gazebo/launch/: rviz.launch  test_gripper.launch  ur3e_gripper_bringup.launch
ur3e_robotiq_gazebo/rviz/: moveit.rviz
ur3e_robotiq_gazebo/urdf/: gen_urdf.sh  ur.xacro  ur3e_robotiq.urdf  ur3e_robotiq.xacro
ur3e_robotiq_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur3e_robotiq_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  (+3 more)
vision/object_detection/: CMakeLists.txt  README.md  package.xml
vision/object_detection/script/: CMakeLists.txt  move_grasp.py  object_detection_node.py
(+17 files in other folders)
