<?xml version="1.0"?>
<package>
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>The object detection module(package) of vision</description>
  <license>BSD</license>

  <maintainer email="tanr0041@e.ntu.edu.sg">armine</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
